--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,7 @@
-@import "_normalize";
-// api: https://github.com/necolas/normalize.css/
-@import "_variables";
-@import "_base";
-@import "@/styles/element-variables.scss";
+@use "_normalize";
+@use "_variables";
+@use "_base";
+@use "@/styles/element-variables.scss";
 
 .element-error-message-zindex {
   z-index: 3000 !important;
